--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,18 @@
         android:id="@+id/btnClick"
         android:text="click"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvResponse"/>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:id="@+id/pgLoading"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"/>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBookList"
         android:layout_width="match_parent"
