--- a/app/src/main/res/layout/detail.xml
+++ b/app/src/main/res/layout/detail.xml
@@ -6,6 +6,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/tvFour"
         android:text="Detail"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
